[package]
name = "sshuttle_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
regex = "1"
dns-lookup = "1.0.8"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
